navidrome/navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        ports:
        - containerPort: 4533
        volumeMounts:
        - name: data
          mountPath: /data
        - name: music
          mountPath: /music
          readOnly: true
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: music-data-nfs-pvc
      - name: music
        persistentVolumeClaim:
          claimName: music-nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: navidrome
spec:
  selector:
    app: navidrome
  ports:
  - protocol: TCP
    port: 4533
    targetPort: 4533
